# nparse-cpp

./: .gitignore  .travis.yml  AUTHORS  CMakeLists.txt  COPYING  README.md
contrib/: CMakeLists.txt
contrib/cmph-2.0/: CMakeLists.txt
contrib/include/util/: callback.hpp  free.hpp  gag.hpp
contrib/include/utility/: callback.hpp  free.hpp  gag.hpp
contrib/libencode-0.1.0/: CMakeLists.txt
contrib/libencode-0.1.0/include/encode/: encode.hpp
contrib/libencode-0.1.0/source/: encode.cpp
contrib/libplugin-0.1.0/include/plugin/: category.hpp  plugin.hpp
contrib/libplugin-0.1.0/source/: plugin.cpp
contrib/libplugin-0.1.1/include/plugin/: exceptions.hpp  static.hpp
contrib/libplugin-0.1.1/source/: plugin.cpp
contrib/libplugin-0.2.0/: CMakeLists.txt
contrib/libplugin-0.2.0/include/plugin/: category.hpp  exceptions.hpp  plugin.hpp  static.hpp
contrib/libplugin-0.2.0/source/: plugin.cpp
contrib/yaml-cpp-0.5.0/: CMakeLists.txt
contrib/yaml-cpp-0.5.3/: CMakeLists.txt
contrib/yaml-cpp-0.5.3/test/: CMakeLists.txt
data/tests/: acceptor-dict-phf2.ng  acceptor-dict-red1.ng  acceptor-dict.yml  agreement.ng  agreement.yml  arithmetics.ng  arithmetics.yml  arrays.ng  arrays.yml  calculator-guess.yml  calculator.yml  calculator1.ng  calculator2.ng  charclass.ng  charclass.yml  cogito.ng  cogito.yml  concat.yml  context.ng  context.yml  dangling-else.ng  dangling-else.yml  date.ng  date.yml  enumeration.ng  enumeration.yml  error-0001.ng  error-0002.ng  error-redefinition.yml  error-runtime.ng  error-runtime.yml  error-syntax.yml  expression.ng  expression.yml  fibonacci.ng  forwarding.ng  forwarding.yml  function.ext.ng  function.ng  function.yml  (+43 more)
data/tests/classic/: acceptor-dict-phf.txt  acceptor-dict-phf1.ng  acceptor-dict-red.txt  acceptor-dict-red2.ng  acceptor-dict.yml  agreement.ng  agreement.yml  arithmetics.ng  arithmetics.yml  arrays.ng  arrays.yml  assertion.ng  assertion.yml  calculator-guess.yml  calculator.yml  calculator2.ng  calculator2a.ng  charclass.ng  charclass.yml  cogito.yml  cogito0.ng  cogito1.ng  cogito2.ng  cogito3.ng  collatz.ng  collatz.yml  concat.ng  concat.yml  context.yml  context1.ng  context2.ng  context3.ng  dangling-else.ng  dangling-else.yml  date.yml  date1.ng  date2.ng  enumeration.yml  eratosphenes.ng  eratosphenes.yml  (+42 more)
data/tests/errors/: redefinition.ng  redefinition.yml  runtime-functions.ng  runtime-functions.yml  runtime-operators.ng  runtime-operators.yml  sequencing-composition.ng  sequencing-composition.yml  syntax-ambiguity.ng  syntax-ambiguity.yml  syntax-error.yml  syntax-error2.ng
include/anta/: core.hpp  defs.hpp  dsel.hpp  ndl.hpp
include/anta/_aux/: debug_print.hpp  lister.hpp  tracer.hpp  variable.hpp
include/anta/core/: acceptor.hpp  arc.hpp  entangled.hpp  label.hpp  node.hpp  observer.hpp  processor.hpp  state.compressed.hpp  state.hpp  traveller.hpp
include/anta/sas/: end.hpp  (+14 more)
include/nparse/: environment.hpp  exceptions.hpp  functions.hpp  interfaces.hpp  markers.hpp  nparse.hpp
include/nparse-port/: parser.hpp  variable.hpp
include/util/: file_pool.hpp  hash_gen.hpp  memory_pool.hpp  pattern.hpp  range_add.hpp
include/utility/: file_pool.hpp  hash_gen.hpp  memory_pool.hpp  pattern.hpp  range_add.hpp
source/: CMakeLists.txt
source/libnparse_factory/: CMakeLists.txt
source/libnparse_factory/src/: _priority.hpp  acceptor_class.cpp  acceptor_dictionary.cpp  acceptor_end.cpp  acceptor_pass.cpp  acceptor_regex.cpp  acceptor_string.cpp  acceptor_symbol.cpp  factory.cpp  static.cpp  static.hpp
source/libnparse_factory/src/dictionary/: acceptor_phf.hpp  acceptor_red.hpp  combinator.hpp  dictionary.cpp  dictionary.hpp
source/libnparse_runtime/: CMakeLists.txt
source/libnparse_runtime/src/: static.cpp  static.hpp
source/libnparse_runtime/src/functions/: call.cpp  cast.cpp  flow.cpp  len.cpp  nth.cpp  ref.cpp  self.cpp  swap.cpp  typeof.cpp
source/libnparse_runtime/src/operators/: _binary_action.hpp  _binary_operator.hpp  _priority.hpp  access.cpp  arithmetic1.cpp  arithmetic2.cpp  assignment.cpp  assignment1.cpp  assignment2.cpp  assumption.cpp  comma.cpp  conditional.cpp  definition.cpp  inversion.cpp  logical.cpp  negation.cpp  operand.cpp  postfix.cpp  prefix.cpp  relational1.cpp  relational2.cpp  subscript.cpp  subscripting.cpp
source/libnparse_script/: CMakeLists.txt
source/libnparse_script/src/: hashed_string.cpp  markers.cpp  observer_sg.cpp  source_tree.hpp  source_tree.workaround.hpp  static.cpp  static.hpp  tokenizer.cpp  tokenizer.hpp
source/libnparse_script/src/script/: _action_range.hpp  _action_string.hpp  _punct.hpp  _varname.hpp  comment.cpp  expression.cpp  footprint.cpp  grammar.cpp  staging.cpp  statement.cpp
source/libnparse_script/src/script/constructs/: block.cpp  control.cpp  control.hpp  dowhile.cpp  for.cpp  foreach.cpp  ifelse.cpp  marking.cpp  return.cpp  return.hpp  switch.cpp  while.cpp
source/libnparse_script/src/script/decls/: function.cpp  import.cpp  namespace.cpp  node.cpp  rule.cpp
source/libnparse_script/src/script/joints/: _joints.cpp  _joints.hpp  _priority.hpp  alternation.cpp  composition.cpp  conditional.cpp  functor.cpp  operand.cpp  postfix.cpp  prefix.cpp  prioritizing.cpp  sequencing.cpp
source/libnparse_script/src/script/terms/: call.cpp  constant.cpp  operand.cpp  placeholder.cpp  variable.cpp
source/nparse/: CMakeLists.txt
source/nparse-port/: CMakeLists.txt
source/nparse-port/src/: named_property.hpp  nparse-php.cpp  nparse-python.cpp  parser.cpp  variable.cpp  variable_data.hpp  variable_iterator.cpp
source/nparse-test/: CMakeLists.txt
source/nparse-test/src/: test_anta.cpp  test_casts.cpp  test_casts.hpp  test_core.cpp  test_dsel.hpp  test_dsel_arithmetic.cpp  test_dsel_casts.cpp  test_libencode.cpp  test_ndl.cpp  test_range_add.cpp  test_sas.cpp  test_script.cpp  test_script.hpp
source/nparse-test/src/util/: find_files.hpp  parsing.hpp
source/nparse-test/src/utils/: find_files.hpp  parsing.hpp
source/nparse/src/: main.cpp  nparse_app.cpp  nparse_app.hpp  serializer.hpp  tracer_nlg.hpp
tools/syntax/: nparse.vim
(+136 files in other folders)
