include_directories(./utf8-cpp-2.3.4/include)
include_directories(./gtest-1.8.0/googlemock/include)
include_directories(./gtest-1.8.0/googletest/include)
add_subdirectory(./libencode-0.1.0)
add_subdirectory(./libplugin-0.2.0)
add_subdirectory(./gtest-1.8.0)
add_subdirectory(./yaml-cpp-0.5.3)
add_subdirectory(./cmph-2.0)
