include_directories(./include)
add_library(cmph-2.0
    ./source/bdz.c
    ./source/bdz_ph.c
    ./source/bm_numbers.c
    ./source/bmz.c
    ./source/bmz8.c
    ./source/brz.c
    ./source/buffer_entry.c
    ./source/buffer_manager.c
    ./source/chd.c
    ./source/chd_ph.c
    ./source/chm.c
    ./source/cmph.c
    ./source/cmph_benchmark.c
    ./source/cmph_structs.c
    ./source/compressed_rank.c
    ./source/compressed_seq.c
    ./source/fch.c
    ./source/fch_buckets.c
    ./source/graph.c
    ./source/hash.c
    ./source/jenkins_hash.c
    ./source/linear_string_map.c
    ./source/miller_rabin.c
    ./source/select.c
    ./source/vqueue.c
    ./source/vstack.c
)
